@@ -102,9 +102,12 @@ public final class GradleDistributionManager {
         GradleVersion.version("8.8"), // JDK-22
         GradleVersion.version("8.10"),// JDK-23
         GradleVersion.version("8.14"),// JDK-24
+        GradleVersion.version("9.1.0"),// JDK-25
     };
 
-    private static final GradleVersion LAST_KNOWN_GRADLE = GradleVersion.version("8.14"); //NOI18N
+    private static final GradleVersion LAST_KNOWN_GRADLE = GradleVersion.version("9.1.0"); //NOI18N
+
+    private static final int LATEST_SUPPORTED_MAJOR = 9;
 
     final File gradleUserHome;
 
@@ -261,6 +264,64 @@ public final class GradleDistributionManager {
     }
 
     /**
+     * Create a {@link GradleDistribution} from the current (latest) Gradle
+     * release available from the Gradle site. This method uses the
+     * <a href="https://services.gradle.org/versions/current">https://services.gradle.org/versions/current</a>
+     * web service to query the latest available version.
+     *
+     * @return the current Gradle distribution
+     * @throws java.io.IOException if information on the current Gradle release
+     * cannot be accessed
+     */
+    public GradleDistribution currentDistribution() throws IOException {
+        JSONParser parser = new JSONParser();
+        URL versionsCurrent = URI.create("https://services.gradle.org/versions/current").toURL(); //NOI18N
+        try (InputStreamReader is = new InputStreamReader(versionsCurrent.openStream(), StandardCharsets.UTF_8)) {
+            JSONObject current = (JSONObject) parser.parse(is);
+            URI downloadURL = new URI((String) current.get("downloadUrl")); //NOI18N
+            String version = (String) current.get("version");
+            return new GradleDistribution(distributionBaseDir(downloadURL, version), downloadURL, version);
+        } catch (ParseException | URISyntaxException | ClassCastException ex) {
+            throw new IOException(ex);
+        }
+    }
+
+    /**
+     * Returns the latest {@link GradleDistribution} which is supported by this
+     * {@link GradleDistributionManager}. This method uses the
+     * <a href="https://services.gradle.org/versions">https://services.gradle.org/versions</a>
+     * web service to query the version.
+     *
+     * @return the latest Gradle distribution which can still be supported
+     * @throws java.io.IOException if information on the current Gradle release
+     * cannot be accessed
+     */
+    public GradleDistribution latestSupportedDistribution() throws IOException {
+        JSONParser parser = new JSONParser();
+        URL versionsCurrent = URI.create("https://services.gradle.org/versions/" + LATEST_SUPPORTED_MAJOR).toURL(); //NOI18N
+        try (InputStreamReader is = new InputStreamReader(versionsCurrent.openStream(), StandardCharsets.UTF_8)) {
+            JSONArray releases = (JSONArray) parser.parse(is);
+            for (Object obj : releases) {
+                JSONObject release = (JSONObject) obj;
+                if (release.get("snapshot") instanceof Boolean snapshot && !snapshot //NOI18N
+                        && release.get("nightly") instanceof Boolean nightly && !nightly //NOI18N
+                        && release.get("releaseNightly") instanceof Boolean releaseNightly && !releaseNightly //NOI18N
+                        && release.get("activeRc") instanceof Boolean activeRc && !activeRc //NOI18N
+                        && release.get("broken") instanceof Boolean broken && !broken //NOI18N
+                        && release.get("rcFor") instanceof String rcFor && rcFor.isBlank() //NOI18N
+                        && release.get("milestoneFor") instanceof String milestoneFor && milestoneFor.isBlank()) { //NOI18N
+                    URI downloadURL = new URI((String) release.get("downloadUrl")); //NOI18N
+                    String version = (String) release.get("version"); //NOI18N
+                    return new GradleDistribution(distributionBaseDir(downloadURL, version), downloadURL, version);
+                }
+            }
+            throw new IOException("no release found with major version " + LATEST_SUPPORTED_MAJOR);
+        } catch (ParseException | URISyntaxException | ClassCastException ex) {
+            throw new IOException(ex);
+        }
+    }
+
+    /**
      * Create a {@link GradleDistribution} from the Gradle version distributed
      * with the Gradle Tooling of the IDE. This should be the most IDE compatible
      * version, so it can be used as a fallback.
@@ -285,7 +346,7 @@ public final class GradleDistributionManager {
         List<GradleDistribution> ret = new ArrayList<>();
         JSONParser parser = new JSONParser();
         try {
-            URL allVersions = new URL("https://services.gradle.org/versions/all"); //NOI18N
+            URL allVersions = URI.create("https://services.gradle.org/versions/all").toURL(); //NOI18N
             try (InputStreamReader is = new InputStreamReader(allVersions.openStream(), StandardCharsets.UTF_8)) {
                 JSONArray versions = (JSONArray) parser.parse(is);
                 for (Object o : versions) {
